methods.slug.SlugHunting.scala.error
Erreur de compilation :
SlugHunting:11: error: expected class or object definition
def isFacingTrail():Boolean = {
^SlugHunting:24: error: Unmatched closing brace '}' ignored here
    }
    ^